@@ -1,6 +1,6 @@
 Package: paleotree
 Type: Package
-Version: 3.2.1
+Version: 3.2.2
 Title: Paleontological and Phylogenetic Analyses of Evolution
 Date: 2019-05-15
 Author: David W. Bapst, Peter J. Wagner
